--- a/style/styleStudio.css
+++ b/style/styleStudio.css
@@ -168,8 +168,16 @@ html, body {
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
     position: relative;
-    display: flex;
-    top: 25px;
+    padding-top: 25px;
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
+}
+
+.uploadinfo {
+	flex-basis: 470px;
+	width: 100%;
+	justify-content: center;
 }
 
 .stepUpload {
@@ -179,4 +187,13 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;	
+}
+
+.bgText {
+	margin: 20px;
+	font-weight: bold;
+	font-family: Golos Text;
+	font-size: 24px;
+	width: 100%;
+	text-align: center;
 }
